# BlackOS

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _config.yml  cmake_install.cmake  readme.md
BlackOSDev/: BlackOS  BlackOS.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
Framework/: CMakeLists.txt
Framework/BlackOSDisplay/: CMakeLists.txt  cmakeLists.txt
Framework/BlackOSDisplay/inc/: Directives.h  Kcanvas.h  Kfield.h  Kgrid.h  Kgrid.tpp  Kmenu.h  Kwindow.h  cMakeLists.txt
Framework/BlackOSDisplay/src/: Directives.cpp  Display.cpp  DisplayCanvas.cpp  DisplayGrid.cpp  DisplayMenu.cpp  Kcanvas.cpp  Kfield.cpp  Kmenu.cpp  cMakeLists.txt
Framework/BlackOSDisplay/testHelpers/inc/: MenuGenerator.h
Framework/BlackOSDisplay/testHelpers/src/: MenuGenerator.cpp
Framework/BlackOSDisplay/unit_tests/: KmenuTest.cpp
Framework/BlackOSDisplay/unit_tests/testHelpers/inc/: FilledBox.h
Framework/Display/: CMakeLists.txt
Framework/Display/inc/: Directives.h  Kcanvas.h  Kfield.h  Kgrid.h  Kgrid.tpp  Kmenu.h  Kwindow.h
Framework/Display/prototypes/: DisplayCanvas.cpp  DisplayGrid.cpp  DisplayMenu.cpp
Framework/Display/src/: Directives.cpp  DisplayCanvas.cpp  DisplayGrid.cpp  DisplayMenu.cpp  Kcanvas.cpp  Kfield.cpp  Kmenu.cpp
Framework/Display/testHelpers/inc/: MenuGenerator.h
Framework/Display/testHelpers/src/: MenuGenerator.cpp
Framework/Display/unit_tests/: KmenuTest.cpp
Framework/DisplayKernel/: CMakeLists.txt
Framework/DisplayKernel/exec/: CMakeLists.txt
Framework/DisplayKernel/exec/displayCanvas/: DisplayCanvas.cpp
Framework/DisplayKernel/exec/displayGrid/: DisplayGrid.cpp
Framework/DisplayKernel/exec/displayMenu/: DisplayMenu.cpp
Framework/DisplayKernel/exec/displayScreen/: DisplayScreen.cpp
Framework/DisplayKernel/exec/displayWindow/: DisplayWindow.cpp
Framework/DisplayKernel/exec/testHelpers/inc/: MenuGenerator.h
Framework/DisplayKernel/exec/testHelpers/src/: MenuGenerator.cpp
Framework/DisplayKernel/exec/unitTests/: KmenuTest.cpp  MenuTest.cpp
Framework/DisplayKernel/inc/: Directives.h  DisplayHelpers.h  DisplayObject.h  Grid.h  Grid.tpp  Kcanvas.h  Kfield.h  Kgrid.h  Kgrid.tpp  Kmenu.h  Kwindow.h  Menu.h  Screen.h  Vfield.h  Virses.h  Vmenu.h  Vwindow.h  Window.h
Framework/DisplayKernel/libraries/: CMakeLists.txt
Framework/DisplayKernel/prototypes/: DisplayMenu.cpp
Framework/DisplayKernel/src/: Directives.cpp  DisplayHelpers.cpp  Kcanvas.cpp  Kfield.cpp  Kmenu.cpp  Menu.cpp  Screen.cpp  Vfield.cpp  Virses.cpp  Vmenu.cpp  Window.cpp
Framework/DisplayKernel/testHelpers/inc/: MenuGenerator.h
Framework/DisplayKernel/testHelpers/src/: MenuGenerator.cpp
Framework/DisplayKernel/unit_tests/: KmenuTest.cpp
Framework/Trinkets/: CMakeLists.txt
Framework/Trinkets/NavigateDir/: NavigateDir.cpp
Framework/Trinkets/NavigateDir/inc/: NavigationHelpers.h  Navigator.h
Framework/Trinkets/NavigateDir/src/: NavigateDir.cpp  NavigationHelpers.cpp  Navigator.cpp  PathController.cpp
Framework/Trinkets/ScreenShell/: CMakeLists.txt  ScreenShell.cpp  ScreenShell.h
Framework/Trinkets/ScreenShell/src/: ChangeDir.cpp  ClearScreen.cpp  ConfigureShell.cpp  ListChildren.cpp  ListConfigVariables.cpp  NavigateDir.cpp  ScreenShell.cpp  SetShellEnv.cpp  Shortcut.cpp  SplashScreen.cpp
Framework/Trinkets/Shell/: CMakeLists.txt  Shell.cpp  Shell.h
Framework/Trinkets/Shell/src/: ChangeDir.cpp  ClearScreen.cpp  ListChildren.cpp  ListConfigVariables.cpp  NavigateDir.cpp  SetShellEnv.cpp  Shell.cpp  Shortcut.cpp  SplashScreen.cpp
Framework/Trinkets/exec/: CMakeLists.txt
Framework/Trinkets/exec/listChildren/: ListChildren.cpp
Framework/Trinkets/exec/navigateDir/: NavigateDir.cpp
Framework/Trinkets/exec/splashScreen/: Splash.cpp
Framework/Trinkets/exec/splashscriin/: Splashscriin.cpp
Framework/Trinkets/exec/trinketsShell/: TrinketsShell.cpp
Framework/Trinkets/helpers/: PathController.cpp  PathController.h
Framework/Trinkets/inc/: AlphaSortRadix.h  Natives.h  NavigationHelpers.h  PathController.h  Shell.h  SplashScreen.h  TrShell.h
Framework/Trinkets/libraries/: CMakeLists.txt
Framework/Trinkets/src/: AlphaSortRadix.cpp  Natives.cpp  NavigationHelpers.cpp  PathController.cpp  Shell.cpp  SplashScreen.cpp  TrShell.cpp  alpha
header/: BlackOSObjects.h  BlackOSScripts.h  Kfield.h  Kmenu.h  Kwindow.h
source/: BlackOSObjects.cpp  BlackOSScripts.cpp  Kfield.cpp  Kmenu.cpp  Kwindow.cpp  main.cpp
